--- a/manpage.org
+++ b/manpage.org
@@ -6,8 +6,7 @@
 ** Πώς συνδέονται τα PC
 Σπίτι μας το τοπικό δίκτυο έχει σαν "κέντρο" του το router, το κουτάκι
 που μας δίνει ο ΟΤΕ με κάθε νέα σύνδεση. Αυτό μπορεί να συνδέσει έως και 4
-υπολογιστές (μέσω καλωδίων, δεν ασχολούμαστε με WIFI) καθώς έχει 4 θύρες
-ethernet.
+υπολογιστές (μέσω καλωδίων ethernet, δεν ασχολούμαστε με WIFI) καθώς έχει 4 θύρες.
 
 Στο μαγαζί, όπως γνωρίζεται, έχουμε πάνω από 4 PC. Για να μπορέσουμε να τα
 συνδέσουμε όλα μεταξύ τους χρειαζόμαστε ένα άλλο κουτί, που δεν το δίνει ο ΟΤΕ.
@@ -16,7 +15,7 @@ ethernet καλώδια.
 
 *** Switches στο μαγαζί
 Το μαγαζί έχει 3 switches.
-2 πίσω από το ασπρόμαυρο έπιπλο, εκει που βάζουμε το σταθερό,
+2 πίσω από το ασπρόμαυρο έπιπλο, εκει που βάζουμε το τηλέφωνο
 και 1 πίσω απο τα ηχεία του στερεοφωνικού στην μεγάλη βιβλιοθήκη.
 
 Τα 2 πρώτα, έχουν πάνω τους όλα τα PC από το ταμείο μέχρι την πόρτα
@@ -24,16 +23,14 @@ ethernet καλώδια.
 
 ** Ο ρόλος του κάθε PC
 Δεν είναι όλα τα PC ίδια. Πέρα από τα γνωστά (ο βίνδεο για μοντάζ,
-ο 1 για πέρασμα, κτλ κτλ), μερικά PC μας έχουν συγκεκριμένες δουλειές
-μέσα στο δίκτυο του μαγαζιού, ας τα πούμε πόστα. 
-
-Σύμφωνα με την κρίση των αντιμιστρατόρων το κάθε PC μπορεί να μοιράζει
-συγκεκριμένα πράγματα στο δίκτυο.
+ο 1 για πέρασμα, κτλ κτλ), το κάθε PC έχει συγκεκριμένες δουλειές
+μέσα στο δίκτυο του μαγαζιού, ας τις πούμε πόστα.
 
 *** Fotomada 1
 Γνωστός και ως απλά ο 'Ένα' έχει πάνω του αρκετά πράγματα:
 
-- Τη βάση!!
+- Τη βάση
+- Το πέρασμα
 - Τα φακέλια που χρησιμοποιεί κάποιος στην βάρδια (ALBUM_OK, κτλ)
 
 Ο 1 σπάνια κλείνει καθώς κόσμος παίρνει άλμουμ απο το σπίτι του,
@@ -44,9 +41,9 @@ ethernet καλώδια.
 Είναι ένα κουτί αλλιώτικο απο αυτο στο σπίτι σας
 γιατι ο ρόλος του είναι άλλος. Αντί να βλέπει ταινίες και
 να παίζει παιχνίδια η Lizzy μπορεί να μοιράζει(serve!) πολλά Terabytes
-σε όλο το μαγαζί. Λόγω του πως είναι φτιαγμένη δεν χρειάζεται να κλείνει ποτέ
-και αν όλα πάνε καλά, κάποτε θα είναι και η βάση εκεί, και κανένας υπολογιστής
-απο τους άλλους δεν θα πρέπει να μένει ανοιχτός. Προς το παρών η lizzy έχει τα εξής:
+σε όλο το μαγαζί. Λόγω του πως είναι φτιαγμένη δεν χρειάζεται να κλείνει ποτέ.
+
+Προς το παρών η lizzy έχει τα εξής:
 
 - Τα master
 - Τα video
@@ -55,11 +52,17 @@ ethernet καλώδια.
 
 *** Τα υπόλοιπα
 Φυσικά υπάρχουν και άλλα PC με δουλειές στο δίκτυο,
-όπως ο παλιός Βίνδεο που μοιράζει τα παλία βίνδεο (wow).
-
-Τώρα που γνωρίζουμε λίγο πολύ τι παίζει θα εξηγήσω το πλάνο.
+όπως:
+ - ο παλιός Βίνδεο που μοιράζει τα παλία βίνδεο (wow)
+ - ο linux που θα τα πω παρακάτω τα κουμάντα του
+ - τα απλά preview
+ - o facebook
+ - Ο 5 και ο 6 (κάνουν βάρδια όταν τα άλλα είναι γεμάτα)
+ - ο γουτεμβέργιος (Που έχει τον EPSON και το lightroom)
 
 ** Το Πλάνο
+Τώρα που γνωρίζουμε λίγο πολύ τι παίζει θα εξηγήσω το πλάνο.
+
 Server σημαίνει σερβιτόρος, δηλαδή σερβίρει. Όλα τα παραπάνω πόστα είναι δουλειές για
 server, και όχι για τα άλλα PC, καθώς σερβίρουν κάτι στο δίκτυο.
 
